Version history: 0.95
 * Fix /admin directory auto-linking.
 * Add 'www' module to list of modules that doesn't use /KDE prefix.

Version history: 0.94
 * Allow modules of the form KDE/kdelibs to be defined as module names, in case
   you'd like to mirror the layout of the Subversion repository more closely.
 * Don't colorize output to the successfully-built file.
 * Code cleanup.
 * Add the --revision option to the command line.
 * Add new option unsermake-options, which is used for options for unsermake
   instead of using make-options for both make and unsermake.
 * kdesvn-build will simply refuse to try and build kde-common.  On a similar
   vein, updating kde-common won't force unsermake to update as well.
 * kdesvn-build won't try to build the kalyptus subdirectory in kdebindings
   (you'd only experience this error message if using checkout-only).  If there
   are other subdirectories in other modules that exist only for support, but
   not to be built, please let me know and I'll add them to the blacklist.
 * Replaced release-tag option with module-base-path.  The module base path
   is normally automatically figured out based on module name.  However, if
   you'd like to use an alternate path to access the module (hint: branches/
   or tags/), you can use this option.  The final path is figured out like
   this: $svn-server/home/kde/$module-base-path/$module-name.
 * Try both kde-common and KDE/kde-common when looking for an admin dir.
   If neither are there, download kde-common first and then try again.

Version history: 0.93
 * Rewrite the checkout and updating code.  It's ever so slightly easier to
   understand now, which should help with maintainance in the future.
 * Fix the repo switcher to switch the old URL to the full URL so that the
   breakage you may have experience yesterday should be fixed automatically
   without having to run svn switch manually.
 * Add a niceness option to the configuration, which can be set to have