@@ -93,6 +93,9 @@ call, so I would not recommend running it as root at this point.</li>
 prefix the make install command line with a separate command, which is useful
 for sudo.</li>
 
+<li>You can use the <a href="#conf-apidox">apidox</a> option to automatically
+build and install the API documentation for some modules.</li>
+
 <li>You can check out only a portion of a KDE Subversion module.  For example,
 you could check out only taglib from kdesupport, or only K3B from
 extragear/multimedia.  The script will automatically pull in kde-common if
@@ -142,6 +145,7 @@ option to find out more about it.  If one is not documented, please e-mail me
 using the address you can find <a href="#emailaddy">above</a>.
 
 <ul>
+<li><a href="#conf-apidox">apidox</a></li>
 <li><a href="#conf-apply-qt-patches">apply-qt-patches</a></li>
 <li><a href="#conf-binpath">binpath</a></li>
 <li><a href="#conf-build-dir">build-dir</a></li>
@@ -194,6 +198,16 @@ as well.</p>
 <td valign="top">Option-name</td>
 <td valign="top">Module -&gt; Global Behavior</td>
 <td>Notes</td>
+</tr>
+
+<tr id="conf-apidox">
+<td valign="top">apidox</td>
+<td valign="top">Overrides global</td>
+<td>Set this option to 'true' in order to have kdesvn-build automatically
+build and install the API documentation for the module after the normal build/install
+process.  This only works for modules where 'make apidox' does something,
+including kdelibs, kdebase, and koffice, among others.
+</td>
 </tr>
 
 <tr id="conf-apply-qt-patches">
