@@ -79,6 +79,10 @@ module kdelibs
 	configure-flags --enable-sendfile --enable-mitshm
 # You can enable this if you have GCC 4.0.0 (or a patched 3.4)
 #	cxxflags -fvisibility=hidden
+
+# If you're a programmer you may want to build the API docs.  Note that
+# it takes some time. :(
+#	apidox true
 end module
 
 module kdebase
