@@ -1,4 +1,5 @@
 Version history: 0.95
+ * Add apidox conf option, patch provided by levipenumbra.
  * Fix /admin directory auto-linking.
  * Add 'www' module to list of modules that doesn't use /KDE prefix.
 
